--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Droid Sans TV', helvetica, arial;
 }
 
-#feedDiv {
+#playerDiv {
   margin-bottom: 25px;
 }
 
@@ -81,7 +81,7 @@ img#albumCover { position:absolute; right: 10px; top:40px;  z-index: -999;}
 div#search {  margin-bottom: 1em; width: 500px;}
 
 div#description { font-size: 15px; margin-bottom: 1em; color: #666;}
-div#about {position:absolute; bottom:0px; right: 10px; width:150px; font-size: 10px; text-align:right; color: #777;}
+div#about {position:absolute; bottom:0px; right: 10px; width:250px; font-size: 10px; text-align:right; color: #777;}
 img#logo {position:absolute; top:10px; right:15px;}
 
 a.github { background-image: url(https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67); background-position: 0 0; background-repeat: no-repeat; display: block; width: 150px; height: 150px; overflow: hidden; position: absolute; text-indent: -9999px; right: 0; top: 0px; }
