--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-
-/* =============================================================================
-   Primary styles
-   Author: Batuhan Icoz (@batuhanicoz)
-   ========================================================================== */
+body {
+  font-family: helvetica, arial;
+}
 
 #playerDiv {
   margin-bottom: 25px;
@@ -53,9 +51,8 @@ svg[disabled=true] {
   fill: #DDD;
 }
 
-/* aab's original css */
-
-#q { font-size:24px; height: 25px; width: 450px; color:#555;}
+// aab's original css
+#q { font-size: 16px; width: 300px; color:#555;}
 
 
 div.resultContainer {
@@ -69,11 +66,12 @@ div.resultContainer div.result {
 
 div#suggestionResults .result { width:450px; }
 
-div#suggestions div.heading {border-bottom: 0px; margin-bottom: .5em;}
+div#suggestions div.heading {border-bottom: 1px dotted gray; margin-bottom: .5em;}
 div#suggestionResults .result .meta { color: #000066;  }
 div#suggestionResults .result .track { font-size: 17px;  }
 div#suggestionResults .result .artist { font-size: 12px; }
 div#suggestionResults .result .actions { font-size: 15px; margin-top:5px; color: #692200;}
+div#suggestionResults img { float:left; margin: 3px; }
 
 small {font-size: 11px;}
 
@@ -85,3 +83,5 @@ div#search {  margin-bottom: 1em; width: 500px;}
 div#description { font-size: 15px; color: #666;}
 div#about {position:absolute; bottom:0px; right: 10px; width:250px; font-size: 10px; text-align:right; color: #777;}
 img#logo {position:absolute; top:10px; right:15px;}
+
+a.github { background-image: url(https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67); background-position: 0 0; background-repeat: no-repeat; display: block; width: 150px; height: 150px; overflow: hidden; position: absolute; text-indent: -9999px; right: 0; top: 0px; }
