--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@ body {
   border: 0;
 }
 
+#topbar_search{
+  float: left;
+  margin: 5px 0 0 0;
+  position: relative;
+  filter: alpha(opacity=100);
+  -khtml-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+}
 #playerDiv {
   margin-bottom: 25px;
 }
