--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,50 @@ body {
   -moz-opacity: 1;
   opacity: 1;
 }
+
+/*-----------------------
+RANGE CSS
+------------------------*/
+
+input[type=range] {
+	-webkit-appearance:none;
+	  width:630px;
+	  height:5px;
+	  color: #404040;
+	  background-color: #eedc94;
+	  background-repeat: repeat-x;
+	  background-image: -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
+	  background-image: -moz-linear-gradient(top, #fceec1, #eedc94);
+	  background-image: -ms-linear-gradient(top, #fceec1, #eedc94);
+	  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
+	  background-image: -webkit-linear-gradient(top, #fceec1, #eedc94);
+	  background-image: -o-linear-gradient(top, #fceec1, #eedc94);
+	  background-image: linear-gradient(top, #fceec1, #eedc94);
+	  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fceec1', endColorstr='#eedc94', GradientType=0);
+	  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	  border-color: #eedc94 #eedc94 #e4c652;
+	  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	  border-width: 1px;
+	  border-style: solid;
+	  -webkit-border-radius: 4px;
+	  -moz-border-radius: 4px;
+	  border-radius: 4px;
+	  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+	  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+	  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance:none;
+    width:25px;
+    height:25px;
+    border-radius:25px;
+    background:url(../img/range-icon.png) no-repeat;
+    cursor:pointer;
+}
+
+
 #playerDiv {
   margin-bottom: 25px;
 }
@@ -57,36 +101,3 @@ body {
 #volume {
   width: 100px;
 }
-
-svg[disabled=false] {
-  cursor: pointer;
-  fill: black;
-}
-
-svg[disabled=true] {
-  cursor: auto;
-  fill: #DDD;
-}
-
-// aab's original css
-
-div.resultContainer div.result {
-	clear:both;
-	font-size: 17px;
-}
-
-div#suggestionResults .result { width:450px; }
-
-div#suggestions div.heading {border-bottom: 1px dotted gray; margin-bottom: .5em;}
-div#suggestionResults .result .meta { color: #000066;  }
-div#suggestionResults .result .track { font-size: 17px;  }
-div#suggestionResults .result .artist { font-size: 12px; }
-div#suggestionResults .result .actions { font-size: 15px; margin-top:5px; color: #692200;}
-div#suggestionResults img { float:left; margin: 3px; }
-
-small {font-size: 11px;}
-
-img.albumArt {float:left;}
-img#albumCover { position:absolute; right: 10px; top:40px;  z-index: -999;}
-
-div#description { font-size: 15px; color: #666;}
